<resources>
    <string name="app_name">MobCoin</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_me">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loginView_email_input">Email*</string>
    <string name="loginView_password_input">Password*</string>
    <string name="loginView_login_button">Login</string>
    <string name="loginView_topBar_title">Login</string>
    <string name="loginView_loginWithGoogle_button">Login with Google</string>
    <string name="loginView_registerButton_helper">Don\'t have an account ?</string>
    <string name="loginView_registerButton">Register</string>
    <string name="registerView_topBar_title">Register</string>
    <string name="registerView_name_input">Name*</string>
    <string name="registerView_password_input">Password confirm*</string>
    <string name="register">Register</string>
    <string name="registerView_label_avatar">Avatar</string>
    <string name="meFragment_login_register_button">Login/Register</string>
    <string name="meFragment_guestMessage">You are using the app as guest</string>
    <string name="favorites">Favorites</string>
    <string name="homeView_topBarTitle">Markets</string>
    <string name="home_card_fear_greed"><![CDATA[Fear & Greed]]></string>
    <string name="fear">Fear</string>
    <string name="greed">Greed</string>
    <string name="home_view_popularCoinsTitle">Popular coins</string>
    <string name="connected_me_view_distribution">Distribution</string>
    <string name="connected_me_view_assets">Assets</string>
    <string name="searchText">Search for a coin</string>
    <string name="buyText">Buy</string>
    <string name="sellText">Sell</string>
    <string name="Logout">Logout</string>
    <string name="account_quantity">Account quantity : </string>
    <string name="favorites_not_logged_helper_message">You must log in to add favorites</string>
    <string name="language">Language</string>
    <string name="market_cap">Market Cap</string>
    <string name="volume">Volume</string>
    <string name="dominance">Dominance</string>
    <string name="market_cap_rank">Market Cap Rank : </string>
    <string name="total_supply">Total supply :</string>
    <string name="market_cap_info">Market Cap :</string>
    <string name="_24h_volume_info">24h Volume :</string>
    <string name="trendings">Trendings :</string>
    <string name="main_language">English</string>
    <string name="appliquer">Appliquer</string>
    <string name="currency">Currency</string>
    <string name="available_exchanges">Available Exchanges</string>
    <string name="settings">Settings</string>
    <string name="price">Price</string>
    <string name="_24h">24h %</string>
    <string-array name="languages">
        <item>Francais</item>
        <item>Anglais</item>
        <item>Chinois</item>
    </string-array>
    <string-array name="currency">
        <item>usd</item>
        <item>eur</item>
        <item>jpy</item>
    </string-array>
    <string name="retry">Retry</string>
    <string name="offlineError">An error has occurred!\nPlease check your internet connection.</string>
    <string name="portfolio">Portfolio</string>
    <string name="you_dont_have_any_assets_yet">You dont have any assets yet</string>
    <string name="add_your_first_asset">Add your first asset</string>

</resources>