<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutIsOnlineHome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.IsOnlineHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="4dp">

        <TextView
            android:id="@+id/textView_currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency"
            android:textAppearance="@style/TitleSmallTextStyle"
            android:textColor="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_currency_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:text="@string/price"
            android:textAppearance="@style/TitleSmallTextStyle"
            android:textColor="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView_currency_change"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_currency_change"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/_24h"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TitleSmallTextStyle"
            android:textColor="@color/md_theme_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_coin_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager" />
</LinearLayout>